--- a/index.html
+++ b/index.html
@@ -53,12 +53,39 @@
       // 🧠 Implement a `getNegatives` method which returns an array with the integers that negative
       // 🧠 Implement a `getAllSquared` method which returns an array with the integers squared
       // 🧠 Implement a `pop` method which removes the last integer from `ints`  and returns it
-      // 🧠 Implement a `push` method which takes an int and pushes it to the end of `ints`, and returns the updated `ints` property
+      // 🧠 Implement a `push` method which adds an integer as the last element and return the updated integers
       // 🧠 Implement a `getEveryNth` method which takes an int `n` and returns an array with the ints at position 0, n, n + n, n + n + n, etc
       // 🧠 Implement a `getAllReversed` method which returns the ints in reverse order
       // ❗ WARNING: except for `getAllReversed`, methods must respect the order of the integers
       // ❗ WARNING: note that except for push and pop, the methods don't change the `ints` property
-
+      constructor(...args) {
+        this.ints = args;
+      }
+      getAll() {
+        return this.ints;
+      }
+      getEvens() {
+        return this.ints.filter(int => int % 2 === 0);
+      }
+      getNegatives() {
+        return this.ints.filter(int => int < 0);
+      }
+      getAllSquared() {
+        return this.ints.map(int => int ** 2);
+      }
+      pop() {
+        return this.ints.pop();
+      }
+      push(num) {
+        this.ints.push(num);
+        return this.ints;
+      }
+      getEveryNth(n) {
+        return this.ints.filter((_, index) => index % n === 0);
+      }
+      getAllReversed() {
+        return [...this.ints].reverse();
+      }
     }
 
     // 👉 CHALLENGE 2 NerfGun
@@ -76,7 +103,34 @@
       //      * When engaging the safety, return "Safety enabled!"
       //      * When disengaging the safety, return "Safety disabled!"
       // 🌟 HINT: instances need to keep track of their maximum capacity as well as their current capacity
-
+        constructor(totalProjectiles) {
+          this.totalProjectiles = totalProjectiles;
+          this.currentProjectiles = totalProjectiles;
+          this.safety = true;
+        }
+        shoot() {
+          if (this.currentProjectiles > 0 && !this.safety) {
+            this.currentProjectiles--;
+            return "Bang!"
+          } else {
+            return "Click!"
+          }
+        }
+        reload(num) {
+          if (typeof num === 'number' && num > 0) {
+          this.currentProjectiles += num;
+          if (this.currentProjectiles > this.totalProjectiles) {
+            this.currentProjectiles = this.totalProjectiles;
+           }
+           return `${this.currentProjectiles} projectiles left!`;
+          } else {
+            return "Error reloading!";
+          }
+        }
+        toggleSafety() {
+          this.safety = !this.safety;
+          return this.safety ? "Safety enabled!" :  "Safety disabled!";
+        }
     }
 
     // 👉 CHALLENGE 3 EBook
@@ -95,7 +149,20 @@
       //    ebook.next() // returns null
       // 🌟 HINT: remember about the `slice` method which strings and arrays have
       // ❗ Feel free to implement `back`, although this is not required nor graded
-
+      constructor(str, num) {
+        this.str = str;
+        this.num = num;
+        this.currentPage = 0
+      }
+      next() {
+        if (this.currentPage * this.num > this.str.length) {
+          return null;
+        }
+        let start = this.currentPage * this.num;
+        let end = start + this.num;
+        this.currentPage++;
+        return this.str.slice(start, end);
+      }
     }
 
     // 👉 CHALLENGE 4 AntFarm
@@ -130,7 +197,38 @@
       //      console.log(list) // prints ["a"]
       // 👉 HINT: if you are not feeling confident with map and filter, solve the problem with for loops,
       //      and with the piece of mind of all tests passing, refactor to use map/filter
+        constructor(...antNames) {
+          this.ants = antNames.map(name => ({name, health: 100}));
+        }
+        work(){
+          if (this.ants.length === 0) {
+            return "No ants here. Did you work them to death?";
+          }
+          let startingAnts = this.ants.length;
+          this.ants = this.ants.map(ant => {
+            if (ant.health > 20) {
+              ant.health -= 20;
+            } else {
+                ant.health = 0;
+            }
+          return ant;
+          }).filter(ant => ant.health > 0);
+          
 
+          return `${startingAnts} ants starting work!`;
+        }
+        feed(antName) {
+          let found = false;
+          this.ants = this.ants.map(ant => {
+            if (ant.name === antName) {
+              ant.health += 15;
+              found = true;
+            }
+            return ant;
+          });
+
+          return found ? "Yum!" : `${antName} not found!`;
+        }
     }
 
     // 🧪 TESTS, do not make any changes below this line ===================
